# belief-attribution-tracer

./: .gitignore  ARTIFACT.md  CITATION.cff  DATA_PROVENANCE.md  README.md  REPRODUCIBILITY.md  pyproject.toml
docs/: claim-to-artifact-map.md  context.md  metrics-guide.md  overview-index.md  reviewer-onboarding.md
tests/: test_anthropic_client.py  test_detection_pipeline.py  test_gemini_client.py  test_openai_client.py
